# blue-pill-quickstart-rtic

./: Cargo.toml  Embed.toml  README.md  openocd.cfg
.cargo/: config
src/: main.rs
