[package]
name = "blue-pill-rtic-quickstart"
version = "0.1.0"
authors = ["doomy", "Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.6", features = ["rt", "stm32f103" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6", features = ["device"] }
panic-semihosting = "0.5"
cortex-m-rtic = "0.5"
cortex-m-semihosting = "0.3"