[package]
name = "blue-pill-rtic-quickstart"
version = "0.2.0"
authors = ["doomy", "Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
cortex-m = "0.6"
cortex-m-rt = { version = "0.6", features = ["device"] }
cortex-m-rtic = "0.5"
rtt-target = { version = "*", features = ["cortex-m"]}
stm32f1xx-hal = { version = "0.6", features = ["rt", "stm32f103", "medium"] }
# stm32f1 = {version = "0.11", features = ["stm32f103"]} # Needed in some instances


